# Bugs-Board-CA2

./: Board.cpp  Board.h  Bug.cpp  Bug.h  CMakeLists.txt  bugs.txt  main.cpp
BugTypes/: Crawler.cpp  Crawler.h  Hopper.cpp  Hopper.h  Scavenger.cpp  Scavenger.h
